<?xml version="1.0"?>
<package>
  <name>provider_dvl</name>
  <version>1.3.1</version>
  <description>The provider_dvl package</description>

  <author>Francis Masse</author>

  <maintainer email="francisalonzo29@gmail.com">Francis Alonzo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensors_msgs</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensors_msgs</run_depend>
  <run_depend>sonia_common</run_depend>

</package>
